--- a/index.html
+++ b/index.html
@@ -1,13 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>SASS</title>
-</head>
-<body>
-    <div></div>
-</body>
+  </head>
+  <body>
+    <section class="team">
+      <div class="team__slogan">THE GENIUSES BEHIND OUR WORK</div>
+      <div class="team__name">OUR TEAM</div>
+      <div class="team__devider">
+        <hr />
+        <img src="images/devider_icon.png" alt="bonfire icon" />
+        <hr />
+      </div>
+      <div class="team__player player">
+        <div class="player__arrov">
+          <img src="images/angle_left_icon.png" alt="" />
+        </div>
+        <div class="player__picture">
+          <img src="images/player.png" alt="player picture" />
+        </div>
+        <div class="player__devider"></div>
+        <div class="player__info info">
+          <div class="info__name">Sahariar Kabir</div>
+          <br />
+          <hr />
+          <div class="info__position">Frontend Developer</div>
+          <div class="info__social">
+            <div class="social_icon"></div>
+            <div class="social_icon"></div>
+            <div class="social_icon"></div>
+            <div class="social_icon"></div>
+          </div>
+          <div class="info__text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis cursus
+            dui sit amet ligula efficitur, sit amet lacinia massa dictum. Etiam
+            accumsan felis a nunc facilisis, ut euismod lacus placerat. Praesent
+            rutrum eget massa a convallis. Nam vitae augue malesuada, accumsan
+            mauris ut, consectetur.
+          </div>
+          <div class="info__devider"><img src="images/info-devider.png" alt=""></div>
+          <div class="info__more"><button>VIEW PROFILE</button></div>
+        </div>
+        <div class="player__arrov">
+          <img src="images/angle_right_icon.png" alt="" />
+        </div>
+      </div>
+      <div class="team__paginations">
+        <div class="pagination"></div>
+        <div class="pagination"></div>
+        <div class="pagination"></div>
+      </div>
+    </section>
+  </body>
 </html>
