--- a/index.html
+++ b/index.html
@@ -4,56 +4,139 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>SASS</title>
+    <title>CAHEE</title>
   </head>
   <body>
-    <section class="team">
-      <div class="team__slogan">THE GENIUSES BEHIND OUR WORK</div>
-      <div class="team__name">OUR TEAM</div>
-      <div class="team__devider">
-        <hr />
-        <img src="images/devider_icon.png" alt="bonfire icon" />
-        <hr />
+    <header class="header">
+      <div class="header__nav nav container">
+        <div class="nav__logo">
+          <img src="images/logo.png" alt="logo icon" />
+        </div>
+        <ul class="nav__menu menu">
+          <a class="menu__item menu__item-active" href="#">
+            <li>HOME</li>
+          </a>
+          <a class="menu__item" href="#">
+            <li>ABOUT</li>
+          </a>
+          <a class="menu__item" href="#">
+            <li>SERVICES</li>
+          </a>
+          <a class="menu__item" href="#">
+            <li>GALLERY</li>
+          </a>
+          <a class="menu__item" href="#">
+            <li>BLOG</li>
+          </a>
+          <a class="menu__item" href="#">
+            <li>CONTACT</li>
+          </a>
+        </ul>
       </div>
-      <div class="team__player player">
-        <div class="player__arrov">
-          <img src="images/angle_left_icon.png" alt="" />
-        </div>
-        <div class="player__picture">
-          <img src="images/player.png" alt="player picture" />
-        </div>
-        <div class="player__devider"></div>
-        <div class="player__info info">
-          <div class="info__name">Sahariar Kabir</div>
-          <br />
-          <hr />
-          <div class="info__position">Frontend Developer</div>
-          <div class="info__social">
-            <div class="social_icon"></div>
-            <div class="social_icon"></div>
-            <div class="social_icon"></div>
-            <div class="social_icon"></div>
+    </header>
+
+    <!--HEADER ENDS-->
+
+    <!--HERO-->
+    <section class="hero-section">
+      <div class="hero-section__container container">
+        <div class="hero__info info">
+          <div class="info__name">Fresh Life</div>
+          <div class="info__text text">
+            Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco.
           </div>
-          <div class="info__text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis cursus
-            dui sit amet ligula efficitur, sit amet lacinia massa dictum. Etiam
-            accumsan felis a nunc facilisis, ut euismod lacus placerat. Praesent
-            rutrum eget massa a convallis. Nam vitae augue malesuada, accumsan
-            mauris ut, consectetur.
-          </div>
-          <div class="info__devider"><img src="images/info-devider.png" alt=""></div>
-          <div class="info__more"><button>VIEW PROFILE</button></div>
-        </div>
-        <div class="player__arrov">
-          <img src="images/angle_right_icon.png" alt="" />
+          <div class="info__button button"><button>GET FREE NOW</button></div>
         </div>
       </div>
-      <div class="team__paginations">
-        <div class="pagination"></div>
-        <div class="pagination"></div>
-        <div class="pagination"></div>
+      <img src="images/scroll.png" alt="scroll image" />
+    </section>
+    <!--HERO ENDS-->
+    <section class="about-section">
+      <div class="about-section__container container about">
+        <div class="about__picture"></div>
+        <div class="about__info about-info">
+          <div class="about-info__name name">About Us</div>
+          <div class="about-info__text text">
+            <p>
+              Abore Cahee magna aliqua. Ut enim ad minim veniam, quis nostrud
+              exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat. Duis aute irure dolor in reprehenderit in voluptate
+              velit esse cillum.
+            </p>
+            <p>
+              Nim id est laborum. Sed ut perspiciatis unde omnis iste natus
+              error sit voluptatem accusantium doloremque laudantium, totam rem
+              aperiam, eaque ipsa quae ab illo inventore.
+            </p>
+          </div>
+        </div>
       </div>
     </section>
+    <!--ABOUT ENDS-->
+    <section class="serv-section">
+      <div class="serv-section__container container">
+        <div class="services">
+          <div class="services__list list">
+            <ul class="list__service">
+              <li class="list__service-item">
+                <p>Online Shopping</p>
+                <div><img src="images/1.svg" alt="" /></div>
+              </li>
+
+              <li class="list__service-item">
+                <p>Quality Product</p>
+                <div><img src="images/2.svg" alt="" /></div>
+              </li>
+              <li class="list__service-item">
+                <p>
+                  Domestic & International <br />
+                  Delivery
+                </p>
+                <div><img src="images/3.svg" alt="" /></div>
+              </li>
+              <li class="list__service-item">
+                <p>Well Organized</p>
+                <div><img src="images/4.svg" alt="" /></div>
+              </li>
+            </ul>
+          </div>
+          <div class="services__image name"><h3>Our Services</h3></div>
+        </div>
+      </div>
+    </section>
+    <!--SERVICES ENDS-->
+    <section class="gallery-section">
+      <div class="gallery-section__container container">
+        <div class="gallery">
+          <div class="gallery__name name">Gallery</div>
+          <div class="gallery__text text">
+            Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+            exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat.
+          </div>
+          <div class="gallery__items items">
+            <div class="items__row1">
+              <div class="items__row1-peach"></div>
+              <div class="items__row1-berries berries">
+                <div class="berries__bilberry"></div>
+                <div class="berries__blackberry"></div>
+              </div>
+            </div>
+            <div class="items__row2">
+              <div class="items__row2-glass"></div>
+              <div class="items__row2-persimmon"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <footer></footer>
   </body>
 </html>
